# jd-workshop

./: .gitignore  README.md  Taskfile.yml  pod.yaml
.agentskills/: CONTEXT.md  Taskfile.yml
.agentskills/adr/: 0001-centralized-agent-distribution-via-shallow-clone.md
.agentskills/prd/rpsls-game/: rpsls-game.md  traceability-report.md
.agentskills/wiki/: index.md  log.md
.agentskills/wiki/agentskills/: index.md  log.md
.agentskills/wiki/agentskills/agents/: engineer.md  index.md  researcher.md  reviewer.md
.agentskills/wiki/agentskills/commands/: diagnose.md  index.md  pr-done.md  refine-issue.md  refine.md  reflect.md  resolve-pr-comments.md  sync.md  write-skill.md
.agentskills/wiki/agentskills/data-repository/: adr.md  context.md  index.md  memory-db.md  prd.md  references.md  taskfiles.md  templates.md  traceability-report.md  wiki.md
.agentskills/wiki/agentskills/skills/: index.md  open-knowledge-format.md
.agentskills/wiki/rpsls/: backend_api.md  backend_engine.md  frontend_app.md  index.md  log.md  orchestration.md  pod_manifest.md
backend/: Containerfile  README.md  engine.py  main.py  pyproject.toml
backend/tests/: test_engine.py
features/: rpsls.feature
frontend/: Containerfile  index.html  package.json  serve.ts  tailwind.config.js  traceability-report.md  tsconfig.json
frontend/src/: App.stories.tsx  App.test.tsx  App.tsx  index.css  types.ts
mbse/sysml/rpsls/: rpsls.sysml
mbse/ux/: Containerfile  index.html  package.json  traceability-report.md
mbse/ux/src/: App.stories.tsx  App.test.tsx  App.tsx  types.ts
(+80 files in other folders)
